# supabase-parser

./: config.py  dao.py  parser.py  pyproject.toml
parser/: __main__.py  dao.py  dto.py
sources/: source_parser.py  Таблица с дублями кейсов.xlsx
