[tool.poetry]
name = "supabase-parser"
version = "0.1.0"
description = ""
authors = ["ivanm <ivanmuranov595@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
supabase = "^2.4.5"
openpyxl = "^3.1.2"
environs = "^11.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
